A1/y.output
Terminals unused in grammar

   DEREF
   ADDRESSOF


State 39 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 150 conflicts: 10 shift/reduce
State 170 conflicts: 10 shift/reduce
State 171 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 178 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: lines

    2 lines: oneline
    3      | lines oneline

    4 oneline: statement
    5        | functiondeclaration
    6        | functiondefinition

    7 statements: statements degenerableblock
    8           | degenerableblock

    9 statement: ifstatement
   10          | forstatement
   11          | whilestatement
   12          | dowhilestatement
   13          | switchstatement
   14          | returnstatement
   15          | functioncallstatement
   16          | emptystatement
   17          | breakstatement
   18          | continuestatement
   19          | variabledeclarationstatement
   20          | structdeclarationstatement
   21          | expressionstatment

   22 block: '{' statements '}'
   23      | '{' '}'

   24 degenerableblock: block
   25                 | statement

   26 assignment: value EQ expression

   27 declaration: variable
   28            | variable EQ expression

   29 declarationlist: declarationlist ',' declaration
   30                | declaration

   31 case: CASE expression ':' statements
   32     | CASE expression ':'

   33 caselist: case caselist
   34         | case
   35         | defaultcase

   36 defaultcase: DEFAULT ':' statements
   37            | DEFAULT ':'

   38 expressionlist: expressionlist ',' expression
   39               | expression

   40 argument: type IDENTIFIER
   41         | type addressof IDENTIFIER
   42         | type IDENTIFIER '[' ']'
   43         | type IDENTIFIER '[' expression ']'
   44         | type addressof IDENTIFIER '[' ']'
   45         | type addressof IDENTIFIER '[' expression ']'

   46 argumentlist: argumentlist ',' argument
   47             | argument

   48 structmemberlist: structmemberlist ',' structmember
   49                 | structmember

   50 structmember: IDENTIFIER
   51             | IDENTIFIER '[' expression ']'
   52             | IDENTIFIER '[' ']'

   53 functioncall: IDENTIFIER '(' ')'
   54             | IDENTIFIER '(' expressionlist ')'

   55 functiondefinition: type IDENTIFIER '(' argumentlist ')' block
   56                   | type IDENTIFIER '(' ')' block

   57 functiondeclaration: type IDENTIFIER '(' argumentlist ')' ';'
   58                    | type IDENTIFIER '(' ')' ';'

   59 ifstatement: IF '(' expression ')' degenerableblock
   60            | IF '(' expression ')' degenerableblock ELSE degenerableblock

   61 forstatement: FOR '(' expressionlist ';' expressionlist ';' expressionlist ')' degenerableblock
   62             | FOR '(' expressionlist ';' expressionlist ';' ')' degenerableblock
   63             | FOR '(' expressionlist ';' ';' expressionlist ')' degenerableblock
   64             | FOR '(' expressionlist ';' ';' ')' degenerableblock
   65             | FOR '(' ';' expressionlist ';' expressionlist ')' degenerableblock
   66             | FOR '(' ';' expressionlist ';' ')' degenerableblock
   67             | FOR '(' ';' ';' expressionlist ')' degenerableblock
   68             | FOR '(' ';' ';' ')' degenerableblock

   69 whilestatement: WHILE '(' expression ')' degenerableblock

   70 dowhilestatement: DO degenerableblock WHILE '(' expression ')' ';'

   71 switchstatement: SWITCH '(' expression ')' '{' caselist '}'
   72                | SWITCH '(' expression ')' '{' '}'

   73 returnstatement: RETURN ';'
   74                | RETURN expression ';'

   75 functioncallstatement: functioncall ';'

   76 emptystatement: ';'

   77 breakstatement: BREAK ';'

   78 continuestatement: CONTINUE ';'

   79 variabledeclarationstatement: type declarationlist ';'
   80                             | EXTERN type declarationlist ';'

   81 structdeclarationstatement: structdeclaration ';'

   82 expressionstatment: expressionlist ';'

   83 structdeclaration: STRUCT IDENTIFIER '{' memberdeclaratationlist '}'
   84                  | STRUCT IDENTIFIER '{' '}'

   85 memberdeclaratation: type structmemberlist ';'
   86                    | type ';'

   87 memberdeclaratationlist: memberdeclaratationlist memberdeclaratation
   88                        | memberdeclaratation

   89 type: primarytype deref
   90     | primarytype

   91 primarytype: VOID
   92            | INT
   93            | LONG
   94            | SHORT
   95            | FLOAT
   96            | DOUBLE
   97            | CHAR
   98            | LONG primarytype
   99            | SHORT primarytype
  100            | STRUCT IDENTIFIER
  101            | structdeclaration

  102 binaryop: RELATIONALOP
  103         | LOGICALOP
  104         | '+'
  105         | '-'
  106         | '*'
  107         | '/'
  108         | '&'
  109         | '|'
  110         | '^'
  111         | '%'

  112 deref: deref '*'
  113      | '*'

  114 unaryop: '+'
  115        | '-'
  116        | '!'
  117        | '*'
  118        | addressof
  119        | '~'

  120 addressof: '&'

  121 literal: CHARACTER
  122        | NUMBER
  123        | REALNUMBER
  124        | stringlist

  125 stringlist: stringlist STRING
  126           | STRING

  127 variable: IDENTIFIER '[' expression ']'
  128         | IDENTIFIER '[' ']'
  129         | IDENTIFIER
  130         | IDENTIFIER STRUCTFIELDACCESSOP variable
  131         | functioncall

  132 value: literal
  133      | variable
  134      | '(' expression ')'
  135      | '(' primarytype ')' value
  136      | CREMENTOP value
  137      | value CREMENTOP
  138      | unaryop value
  139      | sizeof

  140 sizeof: SIZEOF '(' type ')'
  141       | SIZEOF '(' expression ')'

  142 expression: value
  143           | expression binaryop value
  144           | '(' type ')' expression
  145           | assignment


Terminals, with rules where they appear

$end (0) 0
'!' (33) 116
'%' (37) 111
'&' (38) 108 120
'(' (40) 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    134 135 140 141 144
')' (41) 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    134 135 140 141 144
'*' (42) 106 112 113 117
'+' (43) 104 114
',' (44) 29 38 46 48
'-' (45) 105 115
'/' (47) 107
':' (58) 31 32 36 37
';' (59) 57 58 61 62 63 64 65 66 67 68 70 73 74 75 76 77 78 79 80 81
    82 85 86
'[' (91) 42 43 44 45 51 52 127 128
']' (93) 42 43 44 45 51 52 127 128
'^' (94) 110
'{' (123) 22 23 71 72 83 84
'|' (124) 109
'}' (125) 22 23 71 72 83 84
'~' (126) 119
error (256)
IF (258) 59 60
ELSE (259) 60
WHILE (260) 69 70
DO (261) 70
FOR (262) 61 62 63 64 65 66 67 68
SWITCH (263) 71 72
CASE (264) 31 32
DEFAULT (265) 36 37
EXTERN (266) 80
STRUCT (267) 83 84 100
BREAK (268) 77
CONTINUE (269) 78
RETURN (270) 73 74
SIZEOF (271) 140 141
INT (272) 92
LONG (273) 93 98
SHORT (274) 94 99
FLOAT (275) 95
DOUBLE (276) 96
VOID (277) 91
CHAR (278) 97
IDENTIFIER (279) 40 41 42 43 44 45 50 51 52 53 54 55 56 57 58 83 84
    100 127 128 129 130
RELATIONALOP (280) 102
LOGICALOP (281) 103
CREMENTOP (282) 136 137
EQ (283) 26 28
STRUCTFIELDACCESSOP (284) 130
DEREF (285)
ADDRESSOF (286)
CHARACTER (287) 121
NUMBER (288) 122
REALNUMBER (289) 123
STRING (290) 125 126


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
lines (57)
    on left: 2 3, on right: 1 3
oneline (58)
    on left: 4 5 6, on right: 2 3
statements (59)
    on left: 7 8, on right: 7 22 31 36
statement (60)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21, on right: 4 25
block (61)
    on left: 22 23, on right: 24 55 56
degenerableblock (62)
    on left: 24 25, on right: 7 8 59 60 61 62 63 64 65 66 67 68 69
    70
assignment (63)
    on left: 26, on right: 145
declaration (64)
    on left: 27 28, on right: 29 30
declarationlist (65)
    on left: 29 30, on right: 29 79 80
case (66)
    on left: 31 32, on right: 33 34
caselist (67)
    on left: 33 34 35, on right: 33 71
defaultcase (68)
    on left: 36 37, on right: 35
expressionlist (69)
    on left: 38 39, on right: 38 54 61 62 63 64 65 66 67 82
argument (70)
    on left: 40 41 42 43 44 45, on right: 46 47
argumentlist (71)
    on left: 46 47, on right: 46 55 57
structmemberlist (72)
    on left: 48 49, on right: 48 85
structmember (73)
    on left: 50 51 52, on right: 48 49
functioncall (74)
    on left: 53 54, on right: 75 131
functiondefinition (75)
    on left: 55 56, on right: 6
functiondeclaration (76)
    on left: 57 58, on right: 5
ifstatement (77)
    on left: 59 60, on right: 9
forstatement (78)
    on left: 61 62 63 64 65 66 67 68, on right: 10
whilestatement (79)
    on left: 69, on right: 11
dowhilestatement (80)
    on left: 70, on right: 12
switchstatement (81)
    on left: 71 72, on right: 13
returnstatement (82)
    on left: 73 74, on right: 14
functioncallstatement (83)
    on left: 75, on right: 15
emptystatement (84)
    on left: 76, on right: 16
breakstatement (85)
    on left: 77, on right: 17
continuestatement (86)
    on left: 78, on right: 18
variabledeclarationstatement (87)
    on left: 79 80, on right: 19
structdeclarationstatement (88)
    on left: 81, on right: 20
expressionstatment (89)
    on left: 82, on right: 21
structdeclaration (90)
    on left: 83 84, on right: 81 101
memberdeclaratation (91)
    on left: 85 86, on right: 87 88
memberdeclaratationlist (92)
    on left: 87 88, on right: 83 87
type (93)
    on left: 89 90, on right: 40 41 42 43 44 45 55 56 57 58 79 80 85
    86 140 144
primarytype (94)
    on left: 91 92 93 94 95 96 97 98 99 100 101, on right: 89 90 98
    99 135
binaryop (95)
    on left: 102 103 104 105 106 107 108 109 110 111, on right: 143
deref (96)
    on left: 112 113, on right: 89 112
unaryop (97)
    on left: 114 115 116 117 118 119, on right: 138
addressof (98)
    on left: 120, on right: 41 44 45 118
literal (99)
    on left: 121 122 123 124, on right: 132
stringlist (100)
    on left: 125 126, on right: 124 125
variable (101)
    on left: 127 128 129 130 131, on right: 27 28 130 133
value (102)
    on left: 132 133 134 135 136 137 138 139, on right: 26 135 136
    137 138 142 143
sizeof (103)
    on left: 140 141, on right: 139
expression (104)
    on left: 142 143 144 145, on right: 26 28 31 32 38 39 43 45 51
    59 60 69 70 71 72 74 127 134 141 143 144


State 0

    0 $accept: . program $end

    IF          shift, and go to state 1
    WHILE       shift, and go to state 2
    DO          shift, and go to state 3
    FOR         shift, and go to state 4
    SWITCH      shift, and go to state 5
    EXTERN      shift, and go to state 6
    STRUCT      shift, and go to state 7
    BREAK       shift, and go to state 8
    CONTINUE    shift, and go to state 9
    RETURN      shift, and go to state 10
    SIZEOF      shift, and go to state 11
    INT         shift, and go to state 12
    LONG        shift, and go to state 13
    SHORT       shift, and go to state 14
    FLOAT       shift, and go to state 15
    DOUBLE      shift, and go to state 16
    VOID        shift, and go to state 17
    CHAR        shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    CREMENTOP   shift, and go to state 20
    CHARACTER   shift, and go to state 21
    NUMBER      shift, and go to state 22
    REALNUMBER  shift, and go to state 23
    STRING      shift, and go to state 24
    '('         shift, and go to state 25
    ';'         shift, and go to state 26
    '+'         shift, and go to state 27
    '-'         shift, and go to state 28
    '*'         shift, and go to state 29
    '&'         shift, and go to state 30
    '!'         shift, and go to state 31
    '~'         shift, and go to state 32

    program                       go to state 33
    lines                         go to state 34
    oneline                       go to state 35
    statement                     go to state 36
    assignment                    go to state 37
    expressionlist                go to state 38
    functioncall                  go to state 39
    functiondefinition            go to state 40
    functiondeclaration           go to state 41
    ifstatement                   go to state 42
    forstatement                  go to state 43
    whilestatement                go to state 44
    dowhilestatement              go to state 45
    switchstatement               go to state 46
    returnstatement               go to state 47
    functioncallstatement         go to state 48
    emptystatement                go to state 49
    breakstatement                go to state 50
    continuestatement             go to state 51
    variabledeclarationstatement  go to state 52
    structdeclarationstatement    go to state 53
    expressionstatment            go to state 54
    structdeclaration             go to state 55
    type                          go to state 56
    primarytype                   go to state 57
    unaryop                       go to state 58
    addressof                     go to state 59
    literal                       go to state 60
    stringlist                    go to state 61
    variable                      go to state 62
    value                         go to state 63
    sizeof                        go to state 64
    expression                    go to state 65


State 1

   59 ifstatement: IF . '(' expression ')' degenerableblock
   60            | IF . '(' expression ')' degenerableblock ELSE degenerableblock

    '('  shift, and go to state 66


State 2

   69 whilestatement: WHILE . '(' expression ')' degenerableblock

    '('  shift, and go to state 67


State 3

   70 dowhilestatement: DO . degenerableblock WHILE '(' expression ')' ';'

    IF          shift, and go to state 1
    WHILE       shift, and go to state 2
    DO          shift, and go to state 3
    FOR         shift, and go to state 4
    SWITCH      shift, and go to state 5
    EXTERN      shift, and go to state 6
    STRUCT      shift, and go to state 7
    BREAK       shift, and go to state 8
    CONTINUE    shift, and go to state 9
    RETURN      shift, and go to state 10
    SIZEOF      shift, and go to state 11
    INT         shift, and go to state 12
    LONG        shift, and go to state 13
    SHORT       shift, and go to state 14
    FLOAT       shift, and go to state 15
    DOUBLE      shift, and go to state 16
    VOID        shift, and go to state 17
    CHAR        shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    CREMENTOP   shift, and go to state 20
    CHARACTER   shift, and go to state 21
    NUMBER      shift, and go to state 22
    REALNUMBER  shift, and go to state 23
    STRING      shift, and go to state 24
    '{'         shift, and go to state 68
    '('         shift, and go to state 25
    ';'         shift, and go to state 26
    '+'         shift, and go to state 27
    '-'         shift, and go to state 28
    '*'         shift, and go to state 29
    '&'         shift, and go to state 30
    '!'         shift, and go to state 31
    '~'         shift, and go to state 32

    statement                     go to state 69
    block                         go to state 70
    degenerableblock              go to state 71
    assignment                    go to state 37
    expressionlist                go to state 38
    functioncall                  go to state 39
    ifstatement                   go to state 42
    forstatement                  go to state 43
    whilestatement                go to state 44
    dowhilestatement              go to state 45
    switchstatement               go to state 46
    returnstatement               go to state 47
    functioncallstatement         go to state 48
    emptystatement                go to state 49
    breakstatement                go to state 50
    continuestatement             go to state 51
    variabledeclarationstatement  go to state 52
    structdeclarationstatement    go to state 53
    expressionstatment            go to state 54
    structdeclaration             go to state 55
    type                          go to state 72
    primarytype                   go to state 57
    unaryop                       go to state 58
    addressof                     go to state 59
    literal                       go to state 60
    stringlist                    go to state 61
    variable                      go to state 62
    value                         go to state 63
    sizeof                        go to state 64
    expression                    go to state 65


State 4

   61 forstatement: FOR . '(' expressionlist ';' expressionlist ';' expressionlist ')' degenerableblock
   62             | FOR . '(' expressionlist ';' expressionlist ';' ')' degenerableblock
   63             | FOR . '(' expressionlist ';' ';' expressionlist ')' degenerableblock
   64             | FOR . '(' expressionlist ';' ';' ')' degenerableblock
   65             | FOR . '(' ';' expressionlist ';' expressionlist ')' degenerableblock
   66             | FOR . '(' ';' expressionlist ';' ')' degenerableblock
   67             | FOR . '(' ';' ';' expressionlist ')' degenerableblock
   68             | FOR . '(' ';' ';' ')' degenerableblock

    '('  shift, and go to state 73


State 5

   71 switchstatement: SWITCH . '(' expression ')' '{' caselist '}'
   72                | SWITCH . '(' expression ')' '{' '}'

    '('  shift, and go to state 74


State 6

   80 variabledeclarationstatement: EXTERN . type declarationlist ';'

    STRUCT  shift, and go to state 7
    INT     shift, and go to state 12
    LONG    shift, and go to state 13
    SHORT   shift, and go to state 14
    FLOAT   shift, and go to state 15
    DOUBLE  shift, and go to state 16
    VOID    shift, and go to state 17
    CHAR    shift, and go to state 18

    structdeclaration  go to state 75
    type               go to state 76
    primarytype        go to state 57


State 7

   83 structdeclaration: STRUCT . IDENTIFIER '{' memberdeclaratationlist '}'
   84                  | STRUCT . IDENTIFIER '{' '}'
  100 primarytype: STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 77


State 8

   77 breakstatement: BREAK . ';'

    ';'  shift, and go to state 78


State 9

   78 continuestatement: CONTINUE . ';'

    ';'  shift, and go to state 79


State 10

   73 returnstatement: RETURN . ';'
   74                | RETURN . expression ';'

    SIZEOF      shift, and go to state 11
    IDENTIFIER  shift, and go to state 19
    CREMENTOP   shift, and go to state 20
    CHARACTER   shift, and go to state 21
    NUMBER      shift, and go to state 22
    REALNUMBER  shift, and go to state 23
    STRING      shift, and go to state 24
    '('         shift, and go to state 25
    ';'         shift, and go to state 80
    '+'         shift, and go to state 27
    '-'         shift, and go to state 28
    '*'         shift, and go to state 29
    '&'         shift, and go to state 30
    '!'         shift, and go to state 31
    '~'         shift, and go to state 32

    assignment    go to state 37
    functioncall  go to state 81
    unaryop       go to state 58
    addressof     go to state 59
    literal       go to state 60
    stringlist    go to state 61
    variable      go to state 62
    value         go to state 63
    sizeof        go to state 64
    expression    go to state 82


State 11

  140 sizeof: SIZEOF . '(' type ')'
  141       | SIZEOF . '(' expression ')'

    '('  shift, and go to state 83


State 12

   92 primarytype: INT .

    $default  reduce using rule 92 (primarytype)


State 13

   93 primarytype: LONG .
   98            | LONG . primarytype

    STRUCT  shift, and go to state 7
    INT     shift, and go to state 12
    LONG    shift, and go to state 13
    SHORT   shift, and go to state 14
    FLOAT   shift, and go to state 15
    DOUBLE  shift, and go to state 16
    VOID    shift, and go to state 17
    CHAR    shift, and go to state 18

    $default  reduce using rule 93 (primarytype)

    structdeclaration  go to state 75
    primarytype        go to state 84


State 14

   94 primarytype: SHORT .
   99            | SHORT . primarytype

    STRUCT  shift, and go to state 7
    INT     shift, and go to state 12
    LONG    shift, and go to state 13
    SHORT   shift, and go to state 14
    FLOAT   shift, and go to state 15
    DOUBLE  shift, and go to state 16
    VOID    shift, and go to state 17
    CHAR    shift, and go to state 18

    $default  reduce using rule 94 (primarytype)

    structdeclaration  go to state 75
    primarytype        go to state 85


State 15

   95 primarytype: FLOAT .

    $default  reduce using rule 95 (primarytype)


State 16

   96 primarytype: DOUBLE .

    $default  reduce using rule 96 (primarytype)


State 17

   91 primarytype: VOID .

    $default  reduce using rule 91 (primarytype)


State 18

   97 primarytype: CHAR .

    $default  reduce using rule 97 (primarytype)


State 19

   53 functioncall: IDENTIFIER . '(' ')'
   54             | IDENTIFIER . '(' expressionlist ')'
  127 variable: IDENTIFIER . '[' expression ']'
  128         | IDENTIFIER . '[' ']'
  129         | IDENTIFIER .
  130         | IDENTIFIER . STRUCTFIELDACCESSOP variable

    STRUCTFIELDACCESSOP  shift, and go to state 86
    '['                  shift, and go to state 87
    '('                  shift, and go to state 88

    $default  reduce using rule 129 (variable)


State 20

  136 value: CREMENTOP . value

    SIZEOF      shift, and go to state 11
    IDENTIFIER  shift, and go to state 19
    CREMENTOP   shift, and go to state 20
    CHARACTER   shift, and go to state 21
    NUMBER      shift, and go to state 22
    REALNUMBER  shift, and go to state 23
    STRING      shift, and go to state 24
    '('         shift, and go to state 89
    '+'         shift, and go to state 27
    '-'         shift, and go to state 28
    '*'         shift, and go to state 29
    '&'         shift, and go to state 30
    '!'         shift, and go to state 31
    '~'         shift, and go to state 32

    functioncall  go to state 81
    unaryop       go to state 58
    addressof     go to state 59
    literal       go to state 60
    stringlist    go to state 61
    variable      go to state 62
    value         go to state 90
    sizeof        go to state 64


State 21

  121 literal: CHARACTER .

    $default  reduce using rule 121 (literal)


State 22

  122 literal: NUMBER .

    $default  reduce using rule 122 (literal)


State 23

  123 literal: REALNUMBER .

    $default  reduce using rule 123 (literal)


State 24

  126 stringlist: STRING .

    $default  reduce using rule 126 (stringlist)


State 25

  134 value: '(' . expression ')'
  135      | '(' . primarytype ')' value
  144 expression: '(' . type ')' expression

    STRUCT      shift, and go to state 7
    SIZEOF      shift, and go to state 11
    INT         shift, and go to state 12
    LONG        shift, and go to state 13
    SHORT       shift, and go to state 14
    FLOAT       shift, and go to state 15
    DOUBLE      shift, and go to state 16
    VOID        shift, and go to state 17
    CHAR        shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    CREMENTOP   shift, and go to state 20
    CHARACTER   shift, and go to state 21
    NUMBER      shift, and go to state 22
    REALNUMBER  shift, and go to state 23
    STRING      shift, and go to state 24
    '('         shift, and go to state 25
    '+'         shift, and go to state 27
    '-'         shift, and go to state 28
    '*'         shift, and go to state 29
    '&'         shift, and go to state 30
    '!'         shift, and go to state 31
    '~'         shift, and go to state 32

    assignment         go to state 37
    functioncall       go to state 81
    structdeclaration  go to state 75
    type               go to state 91
    primarytype        go to state 92
    unaryop            go to state 58
    addressof          go to state 59
    literal            go to state 60
    stringlist         go to state 61
    variable           go to state 62
    value              go to state 63
    sizeof             go to state 64
    expression         go to state 93


State 26

   76 emptystatement: ';' .

    $default  reduce using rule 76 (emptystatement)


State 27

  114 unaryop: '+' .

    $default  reduce using rule 114 (unaryop)


State 28

  115 unaryop: '-' .

    $default  reduce using rule 115 (unaryop)


State 29

  117 unaryop: '*' .

    $default  reduce using rule 117 (unaryop)


State 30

  120 addressof: '&' .

    $default  reduce using rule 120 (addressof)


State 31

  116 unaryop: '!' .

    $default  reduce using rule 116 (unaryop)


State 32

  119 unaryop: '~' .

    $default  reduce using rule 119 (unaryop)


State 33

    0 $accept: program . $end

    $end  shift, and go to state 94


State 34

    1 program: lines .
    3 lines: lines . oneline

    IF          shift, and go to state 1
    WHILE       shift, and go to state 2
    DO          shift, and go to state 3
    FOR         shift, and go to state 4
    SWITCH      shift, and go to state 5
    EXTERN      shift, and go to state 6
    STRUCT      shift, and go to state 7
    BREAK       shift, and go to state 8
    CONTINUE    shift, and go to state 9
    RETURN      shift, and go to state 10
    SIZEOF      shift, and go to state 11
    INT         shift, and go to state 12
    LONG        shift, and go to state 13
    SHORT       shift, and go to state 14
    FLOAT       shift, and go to state 15
    DOUBLE      shift, and go to state 16
    VOID        shift, and go to state 17
    CHAR        shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    CREMENTOP   shift, and go to state 20
    CHARACTER   shift, and go to state 21
    NUMBER      shift, and go to state 22
    REALNUMBER  shift, and go to state 23
    STRING      shift, and go to state 24
    '('         shift, and go to state 25
    ';'         shift, and go to state 26
    '+'         shift, and go to state 27
    '-'         shift, and go to state 28
    '*'         shift, and go to state 29
    '&'         shift, and go to state 30
    '!'         shift, and go to state 31
    '~'         shift, and go to state 32

    $default  reduce using rule 1 (program)

    oneline                       go to state 95
    statement                     go to state 36
    assignment                    go to state 37
    expressionlist                go to state 38
    functioncall                  go to state 39
    functiondefinition            go to state 40
    functiondeclaration           go to state 41
    ifstatement                   go to state 42
    forstatement                  go to state 43
    whilestatement                go to state 44
    dowhilestatement              go to state 45
    switchstatement               go to state 46
    returnstatement               go to state 47
    functioncallstatement         go to state 48
    emptystatement                go to state 49
    breakstatement                go to state 50
    continuestatement             go to state 51
    variabledeclarationstatement  go to state 52
    structdeclarationstatement    go to state 53
    expressionstatment            go to state 54
    structdeclaration             go to state 55
    type                          go to state 56
    primarytype                   go to state 57
    unaryop                       go to state 58
    addressof                     go to state 59
    literal                       go to state 60
    stringlist                    go to state 61
    variable                      go to state 62
    value                         go to state 63
    sizeof                        go to state 64
    expression                    go to state 65


State 35

    2 lines: oneline .

    $default  reduce using rule 2 (lines)


State 36

    4 oneline: statement .

    $default  reduce using rule 4 (oneline)


State 37

  145 expression: assignment .

    $default  reduce using rule 145 (expression)


State 38

   38 expressionlist: expressionlist . ',' expression
   82 expressionstatment: expressionlist . ';'

    ','  shift, and go to state 96
    ';'  shift, and go to state 97


State 39

   75 functioncallstatement: functioncall . ';'
  131 variable: functioncall .

    ';'  shift, and go to state 98

    ';'       [reduce using rule 131 (variable)]
    $default  reduce using rule 131 (variable)


State 40

    6 oneline: functiondefinition .

    $default  reduce using rule 6 (oneline)


State 41

    5 oneline: functiondeclaration .

    $default  reduce using rule 5 (oneline)


State 42

    9 statement: ifstatement .

    $default  reduce using rule 9 (statement)


State 43

   10 statement: forstatement .

    $default  reduce using rule 10 (statement)


State 44

   11 statement: whilestatement .

    $default  reduce using rule 11 (statement)


State 45

   12 statement: dowhilestatement .

    $default  reduce using rule 12 (statement)


State 46

   13 statement: switchstatement .

    $default  reduce using rule 13 (statement)


State 47

   14 statement: returnstatement .

    $default  reduce using rule 14 (statement)


State 48

   15 statement: functioncallstatement .

    $default  reduce using rule 15 (statement)


State 49

   16 statement: emptystatement .

    $default  reduce using rule 16 (statement)


State 50

   17 statement: breakstatement .

    $default  reduce using rule 17 (statement)


State 51

   18 statement: continuestatement .

    $default  reduce using rule 18 (statement)


State 52

   19 statement: variabledeclarationstatement .

    $default  reduce using rule 19 (statement)


State 53

   20 statement: structdeclarationstatement .

    $default  reduce using rule 20 (statement)


State 54

   21 statement: expressionstatment .

    $default  reduce using rule 21 (statement)


State 55

   81 structdeclarationstatement: structdeclaration . ';'
  101 primarytype: structdeclaration .

    ';'  shift, and go to state 99

    $default  reduce using rule 101 (primarytype)


State 56
